--- a/1-1.html
+++ b/1-1.html
@@ -15,6 +15,13 @@
         }
         //edited
 
+        window.onload = function () {
+            button1Pressed();
+            window.setInterval(function () {
+                button1Pressed()
+            }, 2000);
+        }
+
         async function execSelect() {
             var sql = 'select * from Tweets order by time desc limit 20';
             var objects = await osql.connect(sql);
@@ -28,15 +35,32 @@
             html = html + '</ul>';
             document.getElementById('result').innerHTML = html;
         }
+
+        async function TweetButton() {
+            var userid = document.getElementById('tf1').value;
+            var tweet = document.getElementById('tf2').value;
+
+            var sql = 'insert into Tweets (name, tweet, time) values("%USERID%", "%TWEET%", now());';
+            sql = sql.replace("%USERID%", userid);
+            sql = sql.replace("%TWEET%", tweet);
+            console.log(sql);
+            var objects = await osql.connect(sql);
+            console.log(objects);
+        }
     </script>
 
 </head>
 
 <body>
+
     <h1>Tweets</h1>
-    <button onclick="button1Pressed()">X</button>
+    ログイン名:<input id="tf1" value="名無し" type="textfield">
+    <br>
+    tweet:<input id="tf2" type="textfield">
+    <button onclick="TweetButton()">tweet</button>
     <hr>
-    <p id="result">xxxx</p>
+    <p id="result"></p>
+
 </body>
 
 </html>
