--- a/1-1.html
+++ b/1-1.html
@@ -27,12 +27,13 @@
             var objects = await osql.connect(sql);
             console.log(objects);
             var html = '';
-            html = html + '<ul>';
+            html = html + '<table border = "1">';
+            html = html + "<tr><th>name</th><th>tweet</th><th>time</th></tr>"
             for (var i = 0; i < objects.length; i++) {
                 var object = objects[i];
-                html = html + '<li>' + object.name + ":" + object.tweet + '</li>';
+                html = html + '<tr><td>' + object.name + "</td><td>" + object.tweet + '</td><td>' + object.time + '</td></tr>';
             }
-            html = html + '</ul>';
+            html = html + "</table>"
             document.getElementById('result').innerHTML = html;
         }
 
