--- a/1-1.html
+++ b/1-1.html
@@ -54,7 +54,7 @@
 
 <body>
 
-    <h1>ついったー　SA</h1>
+    <h1>ついったー　SA ver.3</h1>
     ログイン名:<input id="tf1" value="名無し" type="textfield">
     <br>
     tweet:<input id="tf2" type="textfield">
