--- a/05/ex5-1.html
+++ b/05/ex5-1.html
@@ -21,12 +21,13 @@
             var objects = await osql.connect(sql);
             console.log(objects);
             var html = '';
-            html = html + '<ul>';
+            html = html + '<table border = "1">';
+            html = html + "<tr><th>id</th><th>name</th><th>tweet</th></tr>"
             for (var i = 0; i < objects.length; i++) {
                 var object = objects[i];
-                html = html + '<li>' + object.id + "," + object.name + "," + object.tweet + "," + object.time + '</li>';
+                html = html + '<tr><td>' + object.id + "</td><td>" + object.name + '</td><td>' + object.tweet + '</td></tr>';
             }
-            html = html + '</ul>';
+            html = html + "</table>"
             document.getElementById('result').innerHTML = html;
         }
     </script>
