--- a/05/ex5-2.html
+++ b/05/ex5-2.html
@@ -12,6 +12,7 @@
     <script>
         $().ready(function () {
             doSelect();
+            setInterval(doSelect, 2000);
         });
 
         function buttonTweetPressed() {
