--- a/05/ex5-2.html
+++ b/05/ex5-2.html
@@ -46,7 +46,11 @@
             html = html + "<tr><th>id</th><th>name</th><th>tweet</th></tr>"
             for (var i = 0; i < objects.length; i++) {
                 var object = objects[i];
-                html = html + '<tr><td>' + object.id + "</td><td>" + object.name + '</td><td>' + object.tweet + '</td></tr>';
+                html = html + '<tr>';
+                html = html + '<td>' + object.id + '</td>';
+                html = html + '<td>' + object.name + '</td>';
+                html = html + '<td>' + object.tweet + '</td>';
+                html = html + '</tr>';
             }
             html = html + "</table>"
             document.getElementById('TweetResult').innerHTML = html;
