--- a/05/ex5-2.html
+++ b/05/ex5-2.html
@@ -11,6 +11,8 @@
 
     <script>
         $().ready(function () {
+            var userid = osql.getParam('username');
+            document.getElementById("tf1").value = userid;
             doSelect();
             setInterval(doSelect, 2000);
         });
@@ -63,7 +65,7 @@
 <body>
     <h1>Tweets</h1>
     <br>
-    名前:<input id="tf1" value="名無し" type="textfield">
+    名前:<input id="tf1" type="textfield">
     <br>
     tweet:<input id="tf2" type="textfield">
     <button onclick="buttonTweetPressed()">tweet</button>
