--- a/06Userv2/index.html
+++ b/06Userv2/index.html
@@ -25,10 +25,10 @@
                 return;
             }
 
-            sessionStorage.setItem('userid', objects[0].userid);
+            sessionStorage.setItem('userid', userid);
             sessionStorage.setItem('username', objects[0].name);
 
-            location.href = `usertop.html?name=${userid}`;
+            location.href = "usertop.html";
         }
     </script>
 
