--- a/06Userv2/list.html
+++ b/06Userv2/list.html
@@ -27,10 +27,15 @@
                 html = html + '<td>' + object.name + '</td>';
                 html = html + '<td>' + '<a href="update.html?userid=' + object.id + '">変更</a>' + '</td>';
                 html = html + '<td>' + '<a href="delete.html?userid=' + object.id + '">削除</a>' + '</td>';
+                html = html + '<td>' + '<button onclick="button1Pressed()">テスト</button>' + '</td>';
                 html = html + '</tr>';
             }
             html = html + '</table>';
             document.getElementById('result').innerHTML = html;
+        }
+
+        function button1Pressed() {
+            window.alert("ok");
         }
     </script>
 
