--- a/06Userv2/usertop.html
+++ b/06Userv2/usertop.html
@@ -15,8 +15,14 @@
         });
 
         function init() {
-            var name = osql.getParam('name');
+            var name = sessionStorage.getItem('username');
             document.getElementById('inputName').innerHTML = name;
+        }
+        function buttonPressed() {
+            location.href = `update.html?userid=${sessionStorage.getItem('userid')}`;
+        }
+        function button2Pressed() {
+            location.href = `../05/ex5-2.html?username=${sessionStorage.getItem('username')}`;
         }
     </script>
 
@@ -26,7 +32,8 @@
     <h1>ユーザトップ</h1>
     <p id="welcome">ようこそ<span id="inputName"></span>さん</p>
     <hr>
-
+    <button onclick="buttonPressed()">edit</button>
+    <button onclick="button2Pressed()">twitter</button>
 </body>
 
 </html>
